/**
 * User Chat Recommendation Engine with Reinforcement Learning
 * Features: XState management, RabbitMQ queuing, Neo4j storage, IndexedDB caching
 * Supports: Offline capability, SIMD JSON parsing, WebAssembly acceleration
 */

import { writable, derived } from 'svelte/store';
import { browser } from '$app/environment';
import { createMachine, interpret, assign } from 'xstate';
import { multiLayerCache } from './multiLayerCache';
import Loki from 'lokijs';
import * as msgpack from '@msgpack/msgpack';

// Types for the recommendation engine
export interface UserChatMessage {
  id: string;
  userId: string;
  sessionId: string;
  content: string;
  role: 'user' | 'assistant' | 'system';
  timestamp: Date;
  metadata: {
    tokenCount: number;
    processingTime: number;
    confidence: number;
    legalDomain: boolean;
    embedding?: number[];
    tags: string[];
  };
}

export interface ChatSession {
  id: string;
  userId: string;
  title: string;
  startTime: Date;
  endTime?: Date;
  messageCount: number;
  totalTokens: number;
  avgConfidence: number;
  topics: string[];
  outcome: 'solved' | 'ongoing' | 'abandoned';
  satisfactionScore?: number;
}

export interface RecommendationAction {
  type: 'suggest_document' | 'suggest_query' | 'suggest_follow_up' | 'suggest_case' | 'suggest_precedent';
  payload: any;
  score: number;
  reasoning: string;
  contextual: boolean;
}

export interface ReinforcementFeedback {
  actionId: string;
  userId: string;
  feedback: 'positive' | 'negative' | 'neutral';
  engagement: number; // 0-1 scale
  timestamp: Date;
  context: any;
}

export interface UserProfile {
  id: string;
  preferences: {
    legalAreas: string[];
    complexity: 'basic' | 'intermediate' | 'advanced';
    responseStyle: 'concise' | 'detailed' | 'comprehensive';
    preferredDocTypes: string[];
  };
  behavior: {
    avgSessionLength: number;
    commonQueries: string[];
    successPatterns: string[];
    timePatterns: number[];
  };
  performance: {
    satisfactionScore: number;
    engagementRate: number;
    successRate: number;
    learningVelocity: number;
  };
}

/**
 * XState machine for chat recommendation lifecycle
 */
const chatRecommendationMachine = createMachine({
  id: 'chatRecommendation',
  initial: 'idle',
  context: {
    currentSession: null,
    userProfile: null,
    activeRecommendations: [],
    feedbackQueue: [],
    processingStats: {
      messagesProcessed: 0,
      recommendationsGenerated: 0,
      feedbackReceived: 0
    }
  },
  states: {
    idle: {
      on: {
        START_SESSION: {
          target: 'sessionActive',
          actions: assign({
            currentSession: (_, event) => event.session
          })
        }
      }
    },
    sessionActive: {
      on: {
        NEW_MESSAGE: {
          target: 'processingMessage',
          actions: assign({
            processingStats: (context) => ({
              ...context.processingStats,
              messagesProcessed: context.processingStats.messagesProcessed + 1
            })
          })
        },
        END_SESSION: {
          target: 'sessionEnding'
        }
      }
    },
    processingMessage: {
      invoke: {
        src: 'processMessage',
        onDone: {
          target: 'generatingRecommendations',
          actions: assign({
            currentMessage: (_, event) => event.data
          })
        },
        onError: {
          target: 'sessionActive'
        }
      }
    },
    generatingRecommendations: {
      invoke: {
        src: 'generateRecommendations',
        onDone: {
          target: 'sessionActive',
          actions: assign({
            activeRecommendations: (_, event) => event.data,
            processingStats: (context) => ({
              ...context.processingStats,
              recommendationsGenerated: context.processingStats.recommendationsGenerated + event.data.length
            })
          })
        },
        onError: {
          target: 'sessionActive'
        }
      }
    },
    sessionEnding: {
      invoke: {
        src: 'finalizeSession',
        onDone: {
          target: 'idle',
          actions: assign({
            currentSession: null,
            activeRecommendations: []
          })
        }
      }
    }
  }
}, {
  services: {
    processMessage: async (context, event) => {
      // Process message with embeddings and analysis
      return await chatEngine.processUserMessage(event.message);
    },
    generateRecommendations: async (context, event) => {
      // Generate ML-powered recommendations
      return await chatEngine.generateRecommendations(context.currentMessage, context.userProfile);
    },
    finalizeSession: async (context, event) => {
      // Store session data and update user profile
      return await chatEngine.finalizeSession(context.currentSession);
    }
  }
});

/**
 * Main User Chat Recommendation Engine
 */
export class UserChatRecommendationEngine {
  private lokiDb: Loki;
  private chatCollection: any;
  private sessionCollection: any;
  private feedbackCollection: any;
  private machine: any;
  private serviceWorker: ServiceWorker | null = null;
  private isInitialized = false;

  // Reactive stores
  public sessionState = writable<any>(null);
  public recommendations = writable<RecommendationAction[]>([]);
  public userProfile = writable<UserProfile | null>(null);
  public processingStats = writable<any>({
    messagesStored: 0,
    recommendationsGenerated: 0,
    feedbackProcessed: 0,
    cacheHitRate: 0
  });

  // Neo4j connection (simulated for local development)
  private neo4jConnection = {
    connected: false,
    sessionCount: 0,
    queryQueue: [] as unknown[]
  };

  // RabbitMQ simulation (using in-memory queues)
  private messageQueues = {
    ingestion: [] as unknown[],
    processing: [] as unknown[],
    recommendations: [] as unknown[],
    feedback: [] as unknown[]
  };

  constructor() {
    this.initializeServices();
  }

  /**
   * Initialize all services and storage layers
   */
  private async initializeServices(): Promise<void> {
    if (!browser) return;

    try {
      console.log('üöÄ Initializing User Chat Recommendation Engine...');

      // Initialize Loki.js with IndexedDB persistence
      await this.initializeLokiDB();
      
      // Initialize XState machine
      this.machine = interpret(chatRecommendationMachine);
      this.machine.start();
      
      // Subscribe to machine state changes
      this.machine.subscribe((state: any) => {
        this.sessionState.set(state);
      });

      // Initialize service worker for offline capability
      await this.initializeServiceWorker();

      // Start background processing queues
      this.startBackgroundProcessing();

      // Initialize Neo4j connection (simulated)
      this.initializeNeo4jConnection();

      this.isInitialized = true;
      console.log('‚úÖ User Chat Recommendation Engine ready');

    } catch (error) {
      console.error('‚ùå Failed to initialize recommendation engine:', error);
    }
  }

  /**
   * Initialize Loki.js with IndexedDB adapter
   */
  private async initializeLokiDB(): Promise<void> {
    this.lokiDb = new Loki('userChatRecommendationEngine.db', {
      adapter: new LokiIndexedDBAdapter(),
      autoload: true,
      autosave: true,
      autosaveInterval: 5000
    });

    return new Promise((resolve) => {
      this.lokiDb.loadDatabase({}, () => {
        // Create collections if they don't exist
        this.chatCollection = this.lokiDb.getCollection('chats') || 
          this.lokiDb.addCollection('chats', {
            indices: ['userId', 'sessionId', 'timestamp'],
            clone: true
          });

        this.sessionCollection = this.lokiDb.getCollection('sessions') ||
          this.lokiDb.addCollection('sessions', {
            indices: ['userId', 'startTime'],
            clone: true
          });

        this.feedbackCollection = this.lokiDb.getCollection('feedback') ||
          this.lokiDb.addCollection('feedback', {
            indices: ['userId', 'actionId', 'timestamp'],
            clone: true
          });

        console.log('‚úÖ Loki.js IndexedDB initialized');
        resolve();
      });
    });
  }

  /**
   * Initialize service worker for offline capability
   */
  private async initializeServiceWorker(): Promise<void> {
    if ('serviceWorker' in navigator) {
      try {
        const registration = await navigator.serviceWorker.register('/sw-chat-engine.js');
        this.serviceWorker = registration.active;
        
        // Set up message handling for offline SIMD JSON parsing
        navigator.serviceWorker.addEventListener('message', (event) => {
          if (event.data.type === 'PARSED_JSON') {
            this.handleOfflineParsedData(event.data.payload);
          }
        });

        console.log('‚úÖ Service Worker registered for offline capability');
      } catch (error) {
        console.warn('Service Worker registration failed:', error);
      }
    }
  }

  /**
   * Store user chat message with full metadata and embeddings
   */
  public async storeUserChat(
    userId: string,
    sessionId: string,
    message: string,
    role: 'user' | 'assistant' | 'system' = 'user',
    metadata: Partial<UserChatMessage['metadata']> = {}
  ): Promise<UserChatMessage> {
    const startTime = Date.now();

    // Generate embedding using nomic-embed
    const embedding = await this.generateEmbedding(message);
    
    // Analyze legal content
    const legalAnalysis = await this.analyzeLegalContent(message);
    
    const chatMessage: UserChatMessage = {
      id: crypto.randomUUID(),
      userId,
      sessionId,
      content: message,
      role,
      timestamp: new Date(),
      metadata: {
        tokenCount: this.estimateTokenCount(message),
        processingTime: Date.now() - startTime,
        confidence: legalAnalysis.confidence,
        legalDomain: legalAnalysis.isLegal,
        embedding,
        tags: legalAnalysis.tags,
        ...metadata
      }
    };

    // Store in local IndexedDB via Loki
    this.chatCollection.insert(chatMessage);

    // Store in multi-layer cache for fast retrieval
    await multiLayerCache.set(`chat:${chatMessage.id}`, chatMessage, {
      type: 'query',
      userId,
      tags: legalAnalysis.tags,
      persistent: true
    });

    // Queue for Neo4j ingestion (background processing)
    this.messageQueues.ingestion.push({
      type: 'STORE_CHAT',
      data: chatMessage,
      timestamp: Date.now()
    });

    // Update session
    await this.updateSession(sessionId, userId);

    // Trigger recommendation generation
    if (role === 'user') {
      this.machine.send({ type: 'NEW_MESSAGE', message: chatMessage });
    }

    // Update stats
    this.processingStats.update(stats => ({
      ...stats,
      messagesStored: stats.messagesStored + 1
    }));

    console.log(`üí¨ Stored chat message: ${message.substring(0, 50)}...`);
    return chatMessage;
  }

  /**
   * Generate recommendations using reinforcement learning
   */
  public async generateRecommendations(
    message: UserChatMessage,
    userProfile?: UserProfile
  ): Promise<RecommendationAction[]> {
    const recommendations: RecommendationAction[] = [];

    try {
      // Get user context from previous chats
      const userContext = await this.getUserContext(message.userId, message.sessionId);
      
      // Semantic similarity search for related content
      const semanticResults = await this.performSemanticSearch(message.content, message.metadata.embedding);
      
      // Query pattern analysis
      const patterns = await this.analyzeQueryPatterns(message.userId);
      
      // Generate contextual recommendations using reinforcement learning
      const rlRecommendations = await this.generateReinforcementRecommendations(
        message,
        userContext,
        semanticResults,
        patterns
      );
      
      recommendations.push(...rlRecommendations);

      // Store recommendations for feedback tracking
      for (const rec of recommendations) {
        await multiLayerCache.set(`recommendation:${rec.type}:${Date.now()}`, rec, {
          type: 'recommendation',
          userId: message.userId,
          tags: ['ml-generated']
        });
      }

      // Update recommendations store
      this.recommendations.set(recommendations);

      // Update stats
      this.processingStats.update(stats => ({
        ...stats,
        recommendationsGenerated: stats.recommendationsGenerated + recommendations.length
      }));

      console.log(`üéØ Generated ${recommendations.length} recommendations`);
      return recommendations;

    } catch (error) {
      console.error('Failed to generate recommendations:', error);
      return [];
    }
  }

  /**
   * Process reinforcement learning feedback
   */
  public async processFeedback(feedback: ReinforcementFeedback): Promise<void> {
    // Store feedback in local database
    this.feedbackCollection.insert(feedback);
    
    // Queue for background ML model updating
    this.messageQueues.feedback.push({
      type: 'REINFORCEMENT_FEEDBACK',
      data: feedback,
      timestamp: Date.now()
    });

    // Update user profile based on feedback
    await this.updateUserProfileFromFeedback(feedback);
    
    // Update stats
    this.processingStats.update(stats => ({
      ...stats,
      feedbackProcessed: stats.feedbackProcessed + 1
    }));

    console.log(`üëç Processed feedback for action: ${feedback.actionId}`);
  }

  /**
   * Search user chats with advanced filtering and ranking
   */
  public async searchUserChats(
    userId: string,
    query: string,
    options: {
      sessionId?: string;
      timeRange?: { start: Date; end: Date };
      legalDomain?: boolean;
      limit?: number;
      useSemanticSearch?: boolean;
    } = {}
  ): Promise<UserChatMessage[]> {
    const { limit = 20, useSemanticSearch = true } = options;

    if (useSemanticSearch) {
      // Use embedding-based semantic search
      const queryEmbedding = await this.generateEmbedding(query);
      return await this.performSemanticChatSearch(userId, query, queryEmbedding, options);
    } else {
      // Use fuzzy search via multi-layer cache
      return await multiLayerCache.fuzzySearch('chat', query, {
        keys: ['content', 'metadata.tags'],
        threshold: 0.4,
        limit
      }).then(results => results.map(r => r.item));
    }
  }

  /**
   * Get comprehensive user analytics
   */
  public async getUserAnalytics(userId: string): Promise<{
    totalChats: number;
    totalSessions: number;
    avgSessionLength: number;
    topTopics: string[];
    satisfactionScore: number;
    engagementTrends: any[];
    recommendationEffectiveness: number;
  }> {
    const userChats = this.chatCollection.find({ userId });
    const userSessions = this.sessionCollection.find({ userId });
    const userFeedback = this.feedbackCollection.find({ userId });

    // Calculate metrics
    const totalChats = userChats.length;
    const totalSessions = userSessions.length;
    const avgSessionLength = userSessions.reduce((sum: number, s: any) => 
      sum + (s.messageCount || 0), 0) / totalSessions || 0;

    // Extract topics from chat tags
    const allTags = userChats.flatMap((chat: any) => chat.metadata.tags || []);
    const topicCounts = allTags.reduce((acc: any, tag: string) => {
      acc[tag] = (acc[tag] || 0) + 1;
      return acc;
    }, {});
    
    const topTopics = Object.entries(topicCounts)
      .sort(([,a], [,b]) => (b as number) - (a as number))
      .slice(0, 10)
      .map(([topic]) => topic);

    // Calculate satisfaction from feedback
    const positiveFeedback = userFeedback.filter((f: any) => f.feedback === 'positive').length;
    const satisfactionScore = userFeedback.length > 0 
      ? positiveFeedback / userFeedback.length 
      : 0.5;

    return {
      totalChats,
      totalSessions,
      avgSessionLength,
      topTopics,
      satisfactionScore,
      engagementTrends: [], // Would be calculated from time series data
      recommendationEffectiveness: satisfactionScore
    };
  }

  /**
   * Export user data for analysis or backup
   */
  public async exportUserData(userId: string, format: 'json' | 'protobuf' | 'msgpack' = 'msgpack'): Promise<Uint8Array | string> {
    const userData = {
      chats: this.chatCollection.find({ userId }),
      sessions: this.sessionCollection.find({ userId }),
      feedback: this.feedbackCollection.find({ userId }),
      profile: await this.getUserProfile(userId),
      analytics: await this.getUserAnalytics(userId),
      exportedAt: new Date().toISOString()
    };

    switch (format) {
      case 'protobuf':
        // Would use protobuf.js for serialization
        console.log('Protobuf export not yet implemented, using MessagePack');
        return msgpack.encode(userData);
      
      case 'msgpack':
        return msgpack.encode(userData);
      
      case 'json':
      default:
        return JSON.stringify(userData, null, 2);
    }
  }

  // Private helper methods...

  private async generateEmbedding(text: string): Promise<number[]> {
    try {
      // Use the enhanced embeddings service
      const { generateEmbedding } = await import('./embeddings-enhanced');
      return await generateEmbedding(text);
    } catch (error) {
      console.error('Failed to generate embedding:', error);
      return new Array(384).fill(0); // Return zero vector as fallback
    }
  }

  private async analyzeLegalContent(text: string): Promise<{
    isLegal: boolean;
    confidence: number;
    tags: string[];
  }> {
    // Simple heuristic analysis - would be replaced with ML model
    const legalTerms = [
      'contract', 'agreement', 'liability', 'damages', 'breach',
      'negligence', 'tort', 'statute', 'regulation', 'compliance',
      'intellectual property', 'copyright', 'trademark', 'patent',
      'litigation', 'court', 'judge', 'jury', 'evidence', 'testimony'
    ];

    const lowerText = text.toLowerCase();
    const foundTerms = legalTerms.filter(term => lowerText.includes(term));
    
    return {
      isLegal: foundTerms.length > 0,
      confidence: Math.min(foundTerms.length / 3, 1),
      tags: foundTerms
    };
  }

  private estimateTokenCount(text: string): number {
    // Rough token estimation (1 token ‚âà 4 characters)
    return Math.ceil(text.length / 4);
  }

  private async updateSession(sessionId: string, userId: string): Promise<void> {
    let session = this.sessionCollection.findOne({ id: sessionId });
    
    if (!session) {
      session = {
        id: sessionId,
        userId,
        title: `Session ${new Date().toLocaleString()}`,
        startTime: new Date(),
        messageCount: 0,
        totalTokens: 0,
        avgConfidence: 0,
        topics: [],
        outcome: 'ongoing'
      };
      this.sessionCollection.insert(session);
    }

    session.messageCount++;
    session.endTime = new Date();
    this.sessionCollection.update(session);
  }

  private async getUserContext(userId: string, sessionId: string): Promise<any> {
    const recentChats = this.chatCollection
      .chain()
      .find({ userId, sessionId })
      .simplesort('timestamp', true)
      .limit(10)
      .data();

    return {
      recentMessages: recentChats,
      sessionContext: this.sessionCollection.findOne({ id: sessionId })
    };
  }

  private async performSemanticSearch(query: string, queryEmbedding?: number[]): Promise<unknown[]> {
    // Would use vector similarity search with pgvector or similar
    // For now, return fuzzy search results
    return await multiLayerCache.fuzzySearch('document', query, {
      keys: ['content', 'title'],
      threshold: 0.6,
      limit: 10
    });
  }

  private async analyzeQueryPatterns(userId: string): Promise<any> {
    const userChats = this.chatCollection.find({ userId, role: 'user' });
    
    // Analyze query patterns, frequency, timing, etc.
    return {
      commonTopics: [],
      queryComplexity: 'intermediate',
      timePatterns: [],
      successPatterns: []
    };
  }

  private async generateReinforcementRecommendations(
    message: UserChatMessage,
    context: any,
    semanticResults: any[],
    patterns: any
  ): Promise<RecommendationAction[]> {
    const recommendations: RecommendationAction[] = [];

    // Simple rule-based recommendations (would be ML-powered)
    if (message.metadata.legalDomain) {
      recommendations.push({
        type: 'suggest_document',
        payload: {
          title: 'Related Legal Documents',
          documents: semanticResults.slice(0, 3)
        },
        score: 0.8,
        reasoning: 'Based on legal content analysis',
        contextual: true
      });

      recommendations.push({
        type: 'suggest_follow_up',
        payload: {
          questions: [
            'Would you like me to analyze the legal precedents?',
            'Should I search for similar cases?',
            'Do you need help with compliance requirements?'
          ]
        },
        score: 0.7,
        reasoning: 'Common follow-up questions for legal queries',
        contextual: true
      });
    }

    return recommendations;
  }

  private async updateUserProfileFromFeedback(feedback: ReinforcementFeedback): Promise<void> {
    // Update user profile based on feedback patterns
    // This would involve more sophisticated ML algorithms
    console.log(`Updating user profile based on ${feedback.feedback} feedback`);
  }

  private async performSemanticChatSearch(
    userId: string,
    query: string,
    queryEmbedding: number[],
    options: any
  ): Promise<UserChatMessage[]> {
    // Would implement cosine similarity search with embeddings
    // For now, return filtered results
    let results = this.chatCollection.find({ userId });

    if (options.sessionId) {
      results = results.filter((chat: any) => chat.sessionId === options.sessionId);
    }

    if (options.timeRange) {
      results = results.filter((chat: any) => {
        const chatTime = new Date(chat.timestamp);
        return chatTime >= options.timeRange.start && chatTime <= options.timeRange.end;
      });
    }

    return results.slice(0, options.limit || 20);
  }

  private async getUserProfile(userId: string): Promise<UserProfile | null> {
    // Generate user profile from chat history and feedback
    const analytics = await this.getUserAnalytics(userId);
    
    return {
      id: userId,
      preferences: {
        legalAreas: analytics.topTopics.slice(0, 5),
        complexity: 'intermediate',
        responseStyle: 'detailed',
        preferredDocTypes: ['contract', 'case_law']
      },
      behavior: {
        avgSessionLength: analytics.avgSessionLength,
        commonQueries: [],
        successPatterns: [],
        timePatterns: []
      },
      performance: {
        satisfactionScore: analytics.satisfactionScore,
        engagementRate: 0.7,
        successRate: 0.8,
        learningVelocity: 0.6
      }
    };
  }

  private startBackgroundProcessing(): void {
    // Process queues every 5 seconds
    if (browser) {
      setInterval(() => {
        this.processIngestionQueue();
        this.processFeedbackQueue();
        this.syncWithNeo4j();
      }, 5000);
    }
  }

  private async processIngestionQueue(): Promise<void> {
    if (this.messageQueues.ingestion.length === 0) return;

    const batch = this.messageQueues.ingestion.splice(0, 10);
    
    // Send to Enhanced RAG ingestion
    try {
      for (const item of batch) {
        await this.sendToEnhancedRAGIngestion(item);
      }
    } catch (error) {
      console.error('Failed to process ingestion queue:', error);
    }
  }

  private async processFeedbackQueue(): Promise<void> {
    if (this.messageQueues.feedback.length === 0) return;

    const batch = this.messageQueues.feedback.splice(0, 5);
    
    // Process reinforcement learning updates
    for (const feedback of batch) {
      await this.updateReinforcementModel(feedback.data);
    }
  }

  private async syncWithNeo4j(): Promise<void> {
    // Simulate Neo4j synchronization
    if (this.neo4jConnection.queryQueue.length > 0) {
      console.log(`Syncing ${this.neo4jConnection.queryQueue.length} items with Neo4j...`);
      this.neo4jConnection.queryQueue = [];
      this.neo4jConnection.sessionCount++;
    }
  }

  private async sendToEnhancedRAGIngestion(item: any): Promise<void> {
    // Send to Enhanced RAG service for processing
    console.log(`Ingesting item: ${item.type}`);
  }

  private async updateReinforcementModel(feedback: ReinforcementFeedback): Promise<void> {
    // Update ML model weights based on feedback
    console.log(`Updating RL model with ${feedback.feedback} feedback`);
  }

  private initializeNeo4jConnection(): void {
    // Simulate Neo4j connection
    this.neo4jConnection.connected = true;
    console.log('‚úÖ Neo4j connection established (simulated)');
  }

  private handleOfflineParsedData(data: any): void {
    // Handle data parsed by service worker using SIMD JSON
    console.log('Received offline parsed data:', data);
  }

  public getSystemStatus() {
    return {
      initialized: this.isInitialized,
      lokiDB: this.lokiDb ? 'connected' : 'disconnected',
      serviceWorker: this.serviceWorker ? 'active' : 'inactive',
      neo4j: this.neo4jConnection.connected,
      queueSizes: {
        ingestion: this.messageQueues.ingestion.length,
        processing: this.messageQueues.processing.length,
        recommendations: this.messageQueues.recommendations.length,
        feedback: this.messageQueues.feedback.length
      }
    };
  }
}

// Custom IndexedDB adapter for Loki.js
class LokiIndexedDBAdapter {
  async loadDatabase(dbname: string, callback: (data: any) => void): Promise<void> {
    try {
      const request = indexedDB.open('LokiChatEngine', 1);
      
      request.onsuccess = (event) => {
        const db = (event.target as IDBOpenDBRequest).result;
        const transaction = db.transaction(['database'], 'readonly');
        const store = transaction.objectStore('database');
        const getRequest = store.get(dbname);
        
        getRequest.onsuccess = () => {
          callback(getRequest.result ? JSON.parse(getRequest.result) : null);
        };
        
        getRequest.onerror = () => callback(null);
      };
      
      request.onerror = () => callback(null);
      
      request.onupgradeneeded = (event) => {
        const db = (event.target as IDBOpenDBRequest).result;
        if (!db.objectStoreNames.contains('database')) {
          db.createObjectStore('database');
        }
      };
    } catch (error) {
      callback(null);
    }
  }

  async saveDatabase(dbname: string, dbstring: string, callback: () => void): Promise<void> {
    try {
      const request = indexedDB.open('LokiChatEngine', 1);
      
      request.onsuccess = (event) => {
        const db = (event.target as IDBOpenDBRequest).result;
        const transaction = db.transaction(['database'], 'readwrite');
        const store = transaction.objectStore('database');
        
        store.put(dbstring, dbname);
        
        transaction.oncomplete = () => callback();
        transaction.onerror = () => callback();
      };
      
      request.onerror = () => callback();
    } catch (error) {
      callback();
    }
  }
}

// Export singleton instance
export const chatEngine = new UserChatRecommendationEngine();

// Export derived stores for reactive UI
export const chatRecommendations = derived(
  [chatEngine.recommendations, chatEngine.processingStats],
  ([$recommendations, $stats]) => ({
    recommendations: $recommendations,
    stats: $stats,
    hasRecommendations: $recommendations.length > 0
  })
);

export default UserChatRecommendationEngine;